--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1158,7 +1158,7 @@ variable:
   numeric variable in your data set ~X~
 
 - Example: the ~Nile~ data set
-  
+
   1. Check the range of values and choose breaks
      #+begin_src R
        min(Nile)
@@ -1188,7 +1188,7 @@ variable:
        title("Nile averages")
        barplot(std,horiz=TRUE,cex.names=0.7,las=1, col="red")
        title("Nile standard deviations")
-     #+end_src    
+     #+end_src
 
      #+RESULTS:
      [[file:../img/nilecat.png]]
@@ -1198,8 +1198,8 @@ variable:
        library(MASS)
        truehist(Nile)
        title("True histogram of Nile")
-     #+end_src    
-     
+     #+end_src
+
      #+RESULTS:
      [[file:../img/nilehist.png]]
 
@@ -1209,11 +1209,87 @@ variable:
 
 - [ ] Home assignment: Measures of Spread ([[https://lyon.instructure.com/courses/655/assignments/3207][Canvas]], Oct 25)
 - [ ] Test 8: DataCamp revision ([[https://lyon.instructure.com/courses/655/assignments/3246/edit?quiz_lti][Canvas]], Dec 2)
-- [ ] Group exercise: Milgram Experiment 
-- [ ] Lecture/practice: covariance/correlation/outliers ([[https://github.com/birkenkrahe/dsmath/blob/main/org/6_correlation.org][GitHub]],
-  [[https://lyon.instructure.com/courses/655/assignments/3261][Canvas upload]])
-- [ ] 3rd sprint review: write an abstract [[https://github.com/birkenkrahe/org/blob/master/img/template.jpg][à la Nature magazine]] (here
-  is an example from my current research project)
+- [ ] Group exercise: Milgram Experiment 1961
+- [ ] Lecture:covariance/correlation/outliers ([[https://github.com/birkenkrahe/dsmath/blob/main/org/6_correlation.org][GitHub]], [[https://lyon.instructure.com/courses/655/assignments/3261][Canvas]] upload)
+- [ ] 3rd sprint review: write an abstract [[https://github.com/birkenkrahe/org/blob/master/img/template.jpg][à la Nature magazine]] 
+
+* 3rd sprint review - write an abstract
+
+Here is an example from my current publication project - you're the
+research participants!
+
+Your abstract should have no more than 300 words. My example has 350
+words (with many references still missing) and could easily be pruned
+to 300. [[https://github.com/birkenkrahe/org/blob/master/research/Abstract.org][The full abstract (work in progress) is here]].
+
+1) "One or two sentences providing a basic *introduction* to the field,
+   comprehensible to a scientist in any discipline."
+
+   #+begin_quote
+   Data science draws on computer science, statistics and domain
+   knowledge. It is highly *interdisciplinary*, even more so than other
+   related fields like business intelligence or artificial
+   intelligence. This interdisciplinarity leads to its alleged
+   'sexyness' (Davenport/Patil, 2012 and 2022) - it purports to be
+   open to students from a wide variety of backgrounds - like biology
+   or psychology, who are interested in widely different
+   applications - like genome analysis or marketing predictions (???).
+   #+end_quote
+
+2) "Two or three sentences of more detailed *background*, comprehensive
+   to scientists in related disciplines."
+
+   #+begin_quote
+   This versatility comes at a price: the beginner's learning path in
+   data science is highly fragmented - it involves different
+   programming languages, data visualization techniques, mathematical
+   and process modeling, and knowledge of computing infrastructure
+   (???). 
+   #+end_quote
+
+3) "One sentence clearly stating the general *problem* being addressed
+   by this particular study." (And how it was addressed.)
+
+   #+begin_quote
+   The problem is how to get enough of an overview of all of these
+   aspects while learning about data science to solve real-world
+   problems, especially for absolute beginners of data science
+   (???). For this study, I have employed the (in computer science
+   terms) ancient art of literate programming for instruction,
+   interaction, and immersion in data science. To facilitate this
+   triade of methods, the equally ancient text editor GNU Emacs with
+   the ESS ('Emacs Speaks Statistics') and Org-mode plugins were used.
+   #+end_quote
+
+4) "Two or three sentences explaining what the main *result* reveals in
+   direct comparison to what was thought to be the case previously, or
+   how the main result adds to previous knowledge."
+
+   #+begin_quote
+   Data science teaching practice has focused on creating special
+   tools like RStudio, a popular IDE for R, packages like the
+   "Tidyverse", or online platforms like DataCamp to make learning
+   data science (in this case via an R programming track) more
+   palatable. Unfortunately, these parallel infrastructures achieve
+   little when it comes to preparing students for the real world
+   (???). The methodological attitude is well summarized by the "low
+   code/no code" trend in IT (???).
+   #+end_quote
+
+5) "One or two sentences to put the results in a broader context."
+
+   #+begin_quote
+   We have used these methods for two consecutive terms across a
+   spectrum of courses, with undergraduate students of varying
+   seniority, background and interests at a small liberal arts
+   college. The results were very encouraging, and contradict the
+   current "no code/low code" trend in IT. In stark contrast, the
+   study demonstrates that a "high road" approach mixing tools that
+   are considered to be difficult but that deliver deep insights into
+   both computing infrastructure and data processing, might be at
+   least as successful if not more successful. Only followup studies
+   can show if this hope will pan out.
+   #+end_quote
 
 * Group exercise: the power of correlations
 #+attr_html: :width 400px
@@ -1224,33 +1300,62 @@ variable:
 Commit Monstrous Acts"
 #+end_quote
 
+- [ ] Participants: 40 middle-class white US American males, aged
+  40-50.
+
 - [ ] What do you think: "Do situational variables play a larger
   factor than personality types when determining obedience?"
 
 - [ ] Put more simply: can people be made to do anything, no matter
   how monstrous? What is the evidence? What about yourself?
 
-- [ ] Which aspects of ethical decisions are missing from the
-  experiment and from the interpretation?
+- [ ] Limitations: which aspects of ethical decisions are missing from
+  the experiment and from its standard interpretation? Which other
+  limitations can you think of?
+
+- [ ] Relevance: which real life situations do you know where
+  obedience plays a role?
 
 - *Discuss with your neighbor(s) and prepare short statements*
 
 #+begin_notes
-- Some limitations include: sample, time pressure, fake setup
-- Missing aspect: faith as the basis of ethical decisions. Along the
-  lines of behavioral psychology, people are reduced to bio feedback
-  machines (mechanistic/posititvist model of humans).
+- Some limitations include: sample bias, time pressure, fake setup -
+  the use of deception:
+  1) The sample consisted of 40 male participants aged between 40-50,
+     middle class, white American citizens
+  2) Time pressure on the participants
+  3) Use of deception
+  4) Time dependency: participants in their 40-50s in 1960 were 20-30
+     in the 1940s = had lived through WWII as adults - does a war make
+     you more or less obedient?
+  5) Lack of ecological validity - test was carried out in an
+     artificial lab environment and cannot per se be generalized to
+     real life obedience such as in the Holocaust
+
+- Missing aspects: e.g. faith as the basis of ethical decisions. Along
+  the lines of behavioral psychology, people are reduced to bio
+  feedback machines (mechanistic/posititvist model of humans). Even
+  without faith, allowances might have to be made for yet undiscovered
+  aspects of the human psyche - perhaps there is an "ethics brain
+  section" that looks different for different people?
+
 - How often does it happen that people want to believe a story so much
-  that they're willing to overlook the limitations of experiments?
+  that they're willing to overlook the limitations of experiments? Can
+  you think of examples?
 #+end_notes
 
-/References:/
-- 7 Famous Psychology Experiments (Oct 16, 2018). [[https://online.king.edu/news/psychology-experiments/][online.king.edu]]
-- Decades later, still asking: would I pull that switch? (Carey,
-  2008). [[https://www.nytimes.com/2008/07/01/health/research/01mind.html][nytimes.com]]
-- How The Milgram Experiment Showed That Everyday People Could Commit
-  Monstrous Acts (Stockton, Sept 12, 2021). [[https://allthatsinteresting.com/milgram-experiment][allthatsinteresting.com]]
-- Milgram's Experiments Explained (Dec 10, 2018). [[https://moderntherapy.online/blog-2/millgrams-experiments-explained][moderntherapy.online]]
+- References:
+  - 7 Famous Psychology Experiments (Oct 16, 2018). [[https://online.king.edu/news/psychology-experiments/][online.king.edu]]
+  - Decades later, still asking: would I pull that switch? (Carey,
+    2008). [[https://www.nytimes.com/2008/07/01/health/research/01mind.html][nytimes.com]]
+  - Ethics, deception, and 'Those Milgram experiments' (Herrera ed.,
+    2001). [[https://pubmed.ncbi.nlm.nih.gov/11981991/#:~:text=Critics%20who%20allege%20that%20deception,the%20benefits%20from%20such%20research.][nih.gov]]
+  - How The Milgram Experiment Showed That Everyday People Could
+    Commit Monstrous Acts (Stockton, Sept 12,
+    2021). [[https://allthatsinteresting.com/milgram-experiment][allthatsinteresting.com]]
+  - Milgram's Experiments Explained (Dec 10,
+    2018). [[https://moderntherapy.online/blog-2/millgrams-experiments-explained][moderntherapy.online]]
+    
 * Lecture/practice: Covariance/correlation/outliers
 #+attr_html: :width 400px
 [[../img/lecture1.jpg]]
