--- a/org/6_correlation.org
+++ b/org/6_correlation.org
@@ -542,6 +542,9 @@ All right, yeah«
 
 * Practice: covariance, correlation, outliers
 
+- Download the practice file from 
+- Complete the practice file in Emacs
+- Upload the completed practice file to Canvas
 
 * TODO Glossary: concepts
 
