--- a/org/agenda.org
+++ b/org/agenda.org
@@ -1397,7 +1397,7 @@ field, which is often a series of lucky events, rare opportunities and
 other external factors, which are out of our control, but also the
 '10,000-hour'-rule, which is within our control to achieve.
 #+end_notes
-- [ ] Finish "correlation and covariance" (practice)
+- [ ] Finish "correlation and covariance" (w/practice)
 - [ ] Outliers: *"People are strange when you're a stranger"*
 - [ ] Upload the completed practice 6 Org-mode file [[https://lyon.instructure.com/courses/655/assignments/3261][to Canvas]]
 - [ ] Frequentist/classical/naive vs. Bayesian probability
