--- a/org/6_correlation_practice.org
+++ b/org/6_correlation_practice.org
@@ -1,4 +1,4 @@
-#+TITLE: Practice: Summary statistics
+#+TITLE: Practice: Plots, correlation and covariance
 #+AUTHOR: [YourName] (pledged)
 #+SUBTITLE: Applied math for data science (DSC 482/MTH 445) Fall 2022
 #+STARTUP: overview hideblocks indent inlineimages
@@ -26,7 +26,7 @@
    #+begin_src R :results graphics file :file scatter.png
      
    #+end_src
-
+   
 4) Compute the correlation coefficient of ~Height~ with ~Weight~.
    #+begin_src R
      
